4.1.3
-----
1. Update some dependencies (Axios, Vue, Vuex).
2. Fix clipping of menu button highlight when installed as a chrome webapp and
   using window controls.

4.1.2
-----
 1. Fix grid menu button hover highlight.
 2. Fix showing extra artists in album style queue.
 3. For LMS8.4+ no need to poll for updates, LMS now signals this in its status
    message.
 4. If screen height is 520px or less then un-pinned queue will be full height
    over now-playing.
 5. Add 'Appearances (Band/Orchestra)' and 'Appearances (Conductor)' where
    appropriate.
 6. Ignore swipes if target is scrollable in swiped axis.
 7. Fix forcing iOS to blue highlight if 'from cover' is selected.
 8. If swiping up ignore if in bottom 100px for both layouts.
 9. Prevent text-selection on now-playing bar.
10. Catch, and ignore, any content parsing errors when getting similar artists
    list.

4.1.1
-----
 1. Highlight and scroll timed lyrics by default.
 2. If swiping up in desktop layout ignore if in bottom 100px.
 3. Fix text alignment in grid headers.
 4. Fix hover button positions in lists.
 5. Fix clicking on BBC Sounds emblem for live streams.
 6. Show search icon on search fields even for non-touch devices.
 7. Only apply larger left indent and right indent if queue is not pinned.
 8. Increase min-widths required for track list indentation.
 9. Add 'Play shuffled' to context menus.
10. Add 'Play shuffled' to section headers.
11. Fix 'Play shuffled' for multi-disc albums.
12. Fix total track count for multi-disc albums.
13. Copy accent colour, etc. into 'Server settings' iframe.
14. Add sort action to 'All songs' when navigate from 'Years' or 'Genres'.
15. Fix 'All songs' listings.
16. Add 'mask-able' web-app icon.
17. Re-enable setting theme colour from cover on iOS.
18. Add support for window controls overlay.
19. Work-around 'glowing' progressbar with some zoom levels.
20. Check for updates each time 'Server settings' is closed.